# Copyright (c) 2021 Chipsea Technologies (Shenzhen) Corp., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  wifi_sta_demo = false
  wifi_ap_demo = false
  led_demo = false
}

static_library("example") {
  sources = [
    "example.c",
  ]
  deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static" ]

  if (wifi_sta_demo) {
    sources += ["wifi_demo/wifi_sta_demo.c"]
  }

  if (wifi_ap_demo) {
    sources += ["wifi_demo/wifi_ap_demo.c"]
  }

  if (led_demo) {
    sources += ["led_demo/led_example.c"]
    include_dirs = [
      "//drivers/framework/include/platform",
      "//drivers/framework/include/utils",
      "//drivers/adapter/khdf/liteos_m/osal/include/",
      "//drivers/framework/include/osal",
    ]
  }
}
